# r-type

./: CMakeLists.txt  README.md  install.ps1  install.sh  test.sh  unit-test.bat  unit-test.sh
doc/: HowToUSeTheECS.md  RTYPE-RFC.txt
include/: EntityEnums.hpp
include/Class/: Connection.h
include/Client/: GlobalSettings.hpp  Scenes.hpp
include/Client/Graphic/: GraphicEngine.hpp  HandleEntity.hpp  IGraphic.hpp  TextureBank.hpp
include/Client/Graphic/Components/: ButtonComponent.hpp  CheckboxComponent.hpp  DropDownButtonComponent.hpp  InputBoxComponent.hpp  MusicComponent.hpp  SliderComponent.hpp  TextComponent.hpp  TextureComponent.hpp
include/Client/Graphic/EventListeners/: InputEventListener.hpp
include/Client/Graphic/Scenes/: ConnectToServerMenuScene.hpp  ConnectingToServerMenuScene.hpp  GameLoadingScene.hpp  GameScene.hpp  IScene.hpp  MainMenuScene.hpp  ServerLobbyMenuScene.hpp  SettingsMenuScene.hpp  TitleMenuScene.hpp
include/Client/Graphic/Systems/: ButtonSystem.hpp  CheckboxSystem.hpp  DropDownButtonSystem.hpp  EndFrameSystem.hpp  InputBoxSystem.hpp  SceneManagerSystem.hpp  SliderSystem.hpp  SoundSystem.hpp  StartFrameSystem.hpp  TextSystem.hpp  TextureSystem.hpp
include/Graphic/: GlobalSettings.hpp
include/Server/: ClientHandler.hpp  RTypeServer.hpp  RTypeServerStruct.hpp  ServerEvents.hpp  ServerSystems.hpp
include/Server/Components/: PlayerEventsComponent.hpp  WeaponComponent.hpp
include/Server/Components/TagComponents/: BossComponent.hpp  BulletComponent.hpp  MobComponent.hpp  PlayerComponent.hpp
include/Server/Events/: KillEntityEvent.hpp  NewEntityEvent.hpp  PartyEndEvent.hpp
include/Server/ServerSystem/: HandleAuthenticationSystem.hpp  HandleBossAISystem.hpp  HandleConnectionSystem.hpp  HandleDisconnectionPackageSystem.hpp  HandleGameStatusSystem.hpp  HandleInformationPackageSystem.hpp  HandleLoadStatusSystem.hpp  HandleLobbyStatusSystem.hpp  HandleMobAISystem.hpp  HandleUnloadStatusSystem.hpp  HitboxSystem.hpp  MissileSystem.hpp  ReceiveNewDataSystem.hpp  SendDestroyEntitiesPackageSystem.hpp  SendMoveEntitiesPackageSystem.hpp  SendNewEntitiesPackageSystem.hpp  UpdateEntitiesEventSystem.hpp  WaveSystem.hpp
lib/Clock/: CMakeLists.txt
lib/Clock/include/: Clock.hpp
lib/Clock/src/: Clock.cpp
lib/CrossPlatformNetwork/: CMakeLists.txt
lib/CrossPlatformNetwork/include/: ANetwork.hpp  Buffer.hpp  Client.hpp  CpnUtils.hpp  CrossPlatformNetwork.hpp  INetwork.hpp  ReceptionFunctions.hpp  Server.hpp
lib/CrossPlatformNetwork/src/: ANetwork.cpp  Buffer.cpp  Client.cpp  CpnUtils.cpp  ReceptionFunctions.cpp  Server.cpp
lib/GameEngine/: CMakeLists.txt
lib/GameEngine/include/: GameEngine.hpp  GameMacro.hpp  PhysicEngine.hpp
lib/GameEngine/include/Architecture/: ASystem.hpp  Entity.hpp  EventsWorker.hpp  IComponent.hpp  IEvent.hpp  IEventListener.hpp  ISystem.hpp  Registry.hpp  SparseArray.hpp  Zipper.hpp  ZipperIterator.hpp
lib/GameEngine/include/Components/: DamageHitboxComponent.hpp  HealthComponent.hpp  IdentityComponent.hpp  InterpolationComponent.hpp  LifeHitboxComponent.hpp  PositionComponent.hpp  VelocityComponent.hpp
lib/GameEngine/include/Geometry/: Collision.hpp  Rectangle.hpp  Vector2D.hpp
lib/GameEngine/include/Systems/: HealthUpdatingSystem.hpp  InterpolationMoveSystem.hpp  InterpolationSystem.hpp
lib/GameEngine/src/Architecture/: ASystem.cpp  EventsWorker.cpp  Registry.cpp
lib/GameEngine/src/Components/: DamageHitboxComponent.cpp  IdentityComponent.cpp  InterpolationComponent.cpp  LifeHitboxComponent.cpp  PositionComponent.cpp  VelocityComponent.cpp
lib/GameEngine/src/Geometry/: Collision.cpp
lib/GameEngine/src/Systems/: HealthUpdatingSystem.cpp  InterpolationMoveSystem.cpp  InterpolationSystem.cpp
lib/NetworkProtocol/: CMakeLists.txt
lib/NetworkProtocol/include/: CommandTypes.hpp  Protocol.hpp
lib/NetworkProtocol/include/Body/: Body.hpp  BodyFactory.hpp  BodyStruct.hpp  DynamicBody.hpp  EmptyBody.hpp  HybridBody.hpp  IBody.hpp
lib/NetworkProtocol/include/Header/: Header.hpp
lib/NetworkProtocol/include/Package/: ClientPackageHandler.hpp  Package.hpp  PackageFactory.hpp  PackageParser.hpp  PackageSender.hpp  ServerPackageHandler.hpp
lib/NetworkProtocol/src/Body/: BodyFactory.cpp  EmptyBody.cpp
lib/NetworkProtocol/src/Header/: Header.cpp
lib/NetworkProtocol/src/Package/: ClientPackageHandler.cpp  Package.cpp  PackageFactory.cpp  PackageParser.cpp  ServerPackageHandler.cpp
lib/Raygui/: CMakeLists.txt
lib/Raygui/include/: raygui.h
lib/Raygui/src/: raygui.c
lib/RaylibGraphic/: CMakeLists.txt
lib/RaylibGraphic/include/: IGraphic.hpp  RaylibGraphic.hpp
lib/RaylibGraphic/src/: RaylibGraphic.cpp
src/Client/: main.cpp
src/Client/Graphic/: GlobalSettings.cpp  TextureBank.cpp  handleEntity.cpp
src/Client/Graphic/Components/: ButtonComponent.cpp  CheckboxComponent.cpp  (+6 more)
src/Server/: ClientHandler.cpp  main.cpp
src/Server/Components/: PlayerEventsComponent.cpp  WeaponComponent.cpp
src/Server/Events/: KillEntityEvent.cpp  NewEntityEvent.cpp  PartyEndEvent.cpp
src/Server/RTypeServer/: RTypeServer.cpp  RunGame.cpp  RunLobby.cpp
src/Server/ServerSystems/: HandleAuthenticationSystem.cpp  HandleBossAISystem.cpp  HandleConnectionSystem.cpp  HandleDisconnectionPackageSystem.cpp  HandleGameStatusSystem.cpp  HandleInformationPackageSystem.cpp  HandleLoadStatusSystem.cpp  HandleLobbyStatusSystem.cpp  HandleMobAISystem.cpp  HandleUnloadStatusSystem.cpp  HitboxSystem.cpp  MissileSystem.cpp  ReceiveNewDataSystem.cpp  SendDestroyEntitiesPackageSystem.cpp  SendMoveEntitiesPackageSystem.cpp  SendNewEntitiesPackageSystem.cpp  UpdateEntitiesMovementSystem.cpp  WaveSystem.cpp
tests/: CMakeLists.txt
tests/include/: tests.hpp
tests/include/EntityComponentSystem/: Entity.hpp  SparseArray.hpp  Zipper.hpp  ZipperIterator.hpp
tests/src/CrossPlatformNetworkLib/: BufferClassTest.cpp  ClientClassTest.cpp  CrossPlatformNetworkFunctionsTest.cpp  CrossPlatformNetworkTest.cpp  ServerClassTest.cpp
tests/src/EntityComponentSystem/: TestRegistry.cpp  TestSparseArray.cpp  TestZipper.cpp  TestZipperIterator.cpp
(+23 files in other folders)
